# easy-ocr

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  main.py  pyproject.toml
scripts/: build.sh  exec.sh  log.sh  rm.sh  run.sh
