[tool.poetry]
name = "pdf-to-text"
version = "0.1.0"
description = ""
authors = ["winverse <public.winverse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.9"
requests = "^2.28.1"
fastapi = "^0.78.0"
validators = "^0.20.0"
uvicorn = "^0.18.2"
uuid = "^1.30"
opencv-python-headless = "^4.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
